# Fli_project

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_11_04_0106-ca15697198f8_.py
api_v1/: __init__.py
api_v1/aircraft/: crud.py  dependencies.py  schemas.py  views.py
api_v1/airport/: crud.py  dependencies.py  schemas.py  views.py
api_v1/flight/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
database/: __init__.py  databaseConnection.py  models.py
