[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nurislam <tasbolatov.nd03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.12.1"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
websockets = "^12.0"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
